<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculatorActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView android:text="@string/lblBillAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:labelFor="@+id/edtBillAmount" />

        <EditText android:id="@+id/edtBillAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/txtBillHint"/>
    </LinearLayout>

    <CheckBox android:id="@+id/chkRound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/divider_margin"
        android:text="@string/chkRound" />
    
    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/divider_margin"
        android:text="@string/btnCalculate" 
        android:onClick="calculateTip"/>
    
  	<TextView
  	    android:id="@+id/txtTipResult"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:layout_marginTop="@dimen/divider_margin_big"
  	    android:text="@string/txtTipResult"
  	    android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>
